Rudimentary layout in place, HTML structure asking for all the codes.
Signed-off-by: Mike Gibson <mike@lovehasnologic.com>

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -92,7 +92,25 @@
 <aside>
 
 	<section id="video-chat">
-		[Content to come when tokbox is integrated]
+
+		<article id="tokbox-team-1" class="baton">
+			[Baton holding Tokbox User]
+		</article>
+
+		<article id="tokbox-team-2" class="baton">
+			[Tokbox User]
+		</article>
+
+		<article id="tokbox-team-3" class="baton">
+			[Tokbox User]
+		</article>
+
+		<article id="tokbox-team-4">
+			[Tokbox User]
+		</article>
+
+		<a href="#" class="button">Join the video chat</a>
+
 	</section>
 	
 	<section id="attendees">
