--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -27,16 +27,27 @@ body {
   /* Reset 1em to 10px */
   line-height: 1.3;
   font-family: adelle, 'Book Antiqua', Georgia, serif;
-  font-weight: 400; }
+  font-weight: 400;
+  background: #f5f6d7 url(../img/bg/noise.png) center top repeat; }
 
 body, select, input, textarea {
   color: #1d2929; }
+
+header {
+  background: #4a525a url(../img/bg/noise.png) center top repeat; }
 
 /* MEDIA QUERIES
 -------------------------------------------------------------------------------*/
 /*/mediaquery*/
 /*/mediaquery*/
 @media screen and (min-width: 768px) {
+  header {
+    padding: 1.0416667% 2.08033333%;
+    /* 10 & 20 / 960 */
+    margin-bottom: 20px;
+    width: 95.833333%;
+    /* 920 / 960 */ }
+
   #main {
     width: 62.5%;
     /* 560 / 960 */
@@ -46,7 +57,7 @@ body, select, input, textarea {
     display: inline; }
 
   #editor, #chat, #video-chat, #attendees {
-    background: #eee;
+    background: #fff;
     margin-bottom: 20px;
     padding: 3.5714286%;
     /* 20 / 560 */ }
@@ -59,8 +70,6 @@ body, select, input, textarea {
     width: 31.25%;
     /* 300 / 960 */
     margin-right: 2.08033333%;
-    /* 20 / 960 */
-    margin-top: 2.08033333%;
     /* 20 / 960 */
     float: right;
     display: inline; }
