--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -11,19 +11,23 @@ $pink: #bd5ca3;
 $green: #92d05c;
 
 @mixin sans($weight) {
-	font-family: museo-sans, Helmet, Freesans, sans-serif;
-	font-weight: $weight;
+  font-family: museo-sans, Helmet, Freesans, sans-serif;
+  font-weight: $weight;
 }
 
 @mixin serif($weight) {
-	font-family: adelle, 'Book Antiqua', Georgia, serif;
-	font-weight: $weight;
+  font-family: adelle, 'Book Antiqua', Georgia, serif;
+  font-weight: $weight;
 }
 
 @mixin float($dir) {
-	float: $dir;
-	display: inline;
-} 
+  float: $dir;
+  display: inline;
+}
+
+@mixin bg($color) {
+  background: $color url(../img/bg/noise.png) center top repeat;
+}
 
 
 
@@ -38,9 +42,9 @@ img::-moz-selection { background: transparent; }
 
 @media only screen and (max-device-width: 480px) {
 
-	html {-webkit-text-size-adjust: none}
-	a:link {-webkit-tap-highlight-color: rgba(0,0,0,0);}
-	
+  html {-webkit-text-size-adjust: none}
+  a:link {-webkit-tap-highlight-color: rgba(0,0,0,0);}
+  
 }
 
 
@@ -51,12 +55,17 @@ img::-moz-selection { background: transparent; }
 ----------------------------------------------------------------------*/
 
 body {
-	font-size: 62.5%; /* Reset 1em to 10px */
-	line-height: 1.3;
-	@include serif(400);
+  font-size: 62.5%; /* Reset 1em to 10px */
+  line-height: 1.3;
+  @include serif(400);
+  @include bg($ltbeige);
 }
 
 body, select, input, textarea { color: $black; }
+
+header {
+  @include bg($dkgray);
+}
 
 
 
@@ -70,46 +79,51 @@ body, select, input, textarea { color: $black; }
 }/*/mediaquery*/
 
 @media screen and (min-width: 600px) {
-	
+  
 }/*/mediaquery*/
 
 @media screen and (min-width: 768px) {
-	
-	#main {
-		width: 62.5%; /* 560 / 960 */	
-		margin-left: 2.08033333%; /* 20 / 960 */
-		@include float(left);
-	}
+  
+  header {
+    padding: 1.0416667% 2.08033333%; /* 10 & 20 / 960 */
+    margin-bottom: 20px;
+    width: 95.833333%; /* 920 / 960 */
+  }
+  
+  #main {
+    width: 62.5%; /* 560 / 960 */ 
+    margin-left: 2.08033333%; /* 20 / 960 */
+    @include float(left);
+  }
 
-	#editor, #chat, #video-chat, #attendees {
-		background: #eee;
-		margin-bottom: 20px;
-		padding: 3.5714286%; /* 20 / 560 */
-	}
-	
-	#video-chat, #attendees {
-		padding: 7.6923077%; /* 20 / 260 */
-	}
-	
-	aside {
-		width: 31.25%; /* 300 / 960 */
-		margin-right: 2.08033333%; /* 20 / 960 */
-		margin-top: 2.08033333%; /* 20 / 960 */
-		@include float(right);
-	}
-	
-	footer {
-		clear: both;
-	}
-	
+  #editor, #chat, #video-chat, #attendees {
+    background: #fff;
+    margin-bottom: 20px;
+    padding: 3.5714286%; /* 20 / 560 */
+  }
+  
+  #video-chat, #attendees {
+    padding: 7.6923077%; /* 20 / 260 */
+  }
+  
+  aside {
+    width: 31.25%; /* 300 / 960 */
+    margin-right: 2.08033333%; /* 20 / 960 */
+    @include float(right);
+  }
+  
+  footer {
+    clear: both;
+  }
+  
 }/*/mediaquery*/
 
 @media screen and (min-width: 1024px) {
-	
+  
 }/*/mediaquery*/
 
 @media screen and (min-width: 1200px) {
-	
+  
 }/*/mediaquery*/
 
 
