--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -63,6 +63,8 @@
   <script src="/_/js/libs.js"></script>
   <script src="/_/js/plugins.js"></script>
   <script src="/_/js/functions.js"></script>
+  <script src="/_/js/backbone.views.js"></script>
+  <script src="/_/js/app.js"></script>
 
 <!-- this is a variation of the official analytics snippet: http://mathiasbynens.be/notes/async-analytics-snippet 
    replace XXXXXX-XX with your site's ID and uncomment to put this into effect
