Added Ace code.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -65,6 +65,9 @@
   <script src="/_/js/functions.js"></script>
   <script src="/_/js/backbone.views.js"></script>
   <script src="/_/js/app.js"></script>
+  <script src="/_/js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/_/js/ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/_/js/ace/mode-javascript.js" type="text/javascript" charset="utf-8"></script>	
 
 <!-- this is a variation of the official analytics snippet: http://mathiasbynens.be/notes/async-analytics-snippet 
    replace XXXXXX-XX with your site's ID and uncomment to put this into effect
