--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -64,7 +64,7 @@
   <script src="/_/js/plugins.js"></script>
   <script src="/_/js/functions.js"></script>
   <script src="/_/js/backbone.views.js"></script>
-  <script src="/_/js/app.js"></script>
+  <script src="/_/js/coderoom.js"></script>
   <script src="/_/js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
   <script src="/_/js/ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
   <script src="/_/js/ace/mode-javascript.js" type="text/javascript" charset="utf-8"></script>	
