--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -36,6 +36,19 @@ body, select, input, textarea {
 header {
   background: #4a525a url(../img/bg/noise.png) center top repeat; }
 
+/*- ACE HAMMERS
+----------------------------------------------------------------------*/
+.ace_gutter {
+  width: 7.1428571428571% !important;
+  /* 50 / 560 */ }
+
+.ace_scroller {
+  width: 89.2857142857143% !important;
+  /* 500 / 560 */ }
+
+.ace_content {
+  width: 100% !important; }
+
 /* MEDIA QUERIES
 -------------------------------------------------------------------------------*/
 /*/mediaquery*/
@@ -56,11 +69,19 @@ header {
     float: left;
     display: inline; }
 
+  #ace-editor {
+    width: 100% !important;
+    display: block;
+    position: relative;
+    height: 300px !important;
+    margin-top: 20px; }
+
   #editor, #chat, #video-chat, #attendees {
     background: #fff;
     margin-bottom: 20px;
     padding: 3.5714286%;
-    /* 20 / 560 */ }
+    /* 20 / 560 */
+    overflow: hidden; }
 
   #video-chat, #attendees {
     padding: 7.6923077%;
