--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,3 +1,15 @@
+<style type="text/css">
+	/* Goodness gracious, I don't belong here! */
+	.ace-editor-wrapper,
+	#ace-editor {
+		height: 400px;
+	}
+	
+	#ace-editor {
+		position: relative;
+	}
+</style>
+
 <header>
 
 	<h1><a href="/" title="Coding Stage's Front Door">Coding Stage</a></h1>
@@ -48,9 +60,8 @@
 		
 			<a href="#" title="Import a Gist" class="button">Import a Gist File</a>
 		
-			<section id="ace-editor">
-				[ACE Editor Goes Here]
-			</section>
+			<!-- This section must not have whitespace in it, otherwise that gets inserted into the buffer when ACE inits. -->
+			<section id="ace-editor"></section>
 			
 		</section>
 		
