--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -42,6 +42,19 @@ header {
   font-family: museo-sans, Helmet, Freesans, sans-serif;
   font-weight: 700; }
 
+/*- ACE HAMMERS
+----------------------------------------------------------------------*/
+.ace_gutter {
+  width: 7.1428571428571% !important;
+  /* 50 / 560 */ }
+
+.ace_scroller {
+  width: 89.2857142857143% !important;
+  /* 500 / 560 */ }
+
+.ace_content {
+  width: 100% !important; }
+
 /* MEDIA QUERIES
 -------------------------------------------------------------------------------*/
 /*/mediaquery*/
@@ -77,7 +90,7 @@ header {
   header nav li a {
     padding: 6px 5px 5px;
     font-size: 1.4em;
-    color: #e8efef;
+    color: white;
     opacity: 0.6;
     text-transform: uppercase;
     text-shadow: 0 -1px #1d2929;
@@ -93,11 +106,7 @@ header {
     border-radius: 4px; }
     header nav li a:hover {
       opacity: 1;
-      background: rgba(232, 239, 239, 0.25);
-      -webkit-box-shadow: 0 1px 0 #b7bcc2;
-      -moz-box-shadow: 0 1px 0 #b7bcc2;
-      -o-box-shadow: 0 1px 0 #b7bcc2;
-      box-shadow: 0 1px 0 #b7bcc2;
+      background: rgba(255, 255, 255, 0.25);
       border-top: 1px solid rgba(29, 41, 41, 0.75); }
 
   #main {
@@ -110,10 +119,21 @@ header {
     overflow: hidden; }
 
   #editor, #chat, #video-chat, #attendees {
-    background: #fff;
     margin-bottom: 20px;
     padding: 3.5714286%;
     /* 20 / 560 */ }
+
+  #ace-editor {
+    height: 300px !important;
+    position: relative;
+    background: white; }
+
+  #room {
+    background: white;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: inset 0 0 5px rgba(29, 41, 41, 0.75); }
 
   #video-chat, #attendees {
     padding: 7.6923077%;
