--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -4,14 +4,17 @@ $ltgray: #b7bcc2;
 $beige: #d7d7b8;
 $ltbeige: #f5f6d7;
 $turq: #4da4a4;
+$turq50: rgba(77,164,164,0.5);
 $ltturq: #92ccbf;
 $black: #1d2929;
+$black50: rgba(29,41,41,0.5);
 $black75: rgba(29,41,41,0.75);
 $white: #fff;
 $white25: rgba(255,255,255,0.25);
-$white80: rgba(255,255,255,0.8);
+$white60: rgba(255,255,255,0.6);
 $pink: #bd5ca3;
 $green: #92d05c;
+$mdgreen: #b6ec86;
 
 @mixin sans($weight) {
   font-family: museo-sans, Helmet, Freesans, sans-serif;
@@ -46,9 +49,30 @@ $green: #92d05c;
 }
 
 @mixin insetshadow {
-  -webkit-box-shadow: inset 0 0 5px $black75;
+  -webkit-box-shadow: inset 0 0 5px $black50;
 }
 
+@mixin button {
+  background: $green url(../img/bg/grad-button.png) left top repeat-x;
+  padding: 5px 10px 4px;
+  display: inline-block;
+  border: 1px solid $green;
+  color: #fff;
+  font-size: 1.1em;
+  text-transform: uppercase;
+  -webkit-box-shadow: 0 0 3px $black50;
+  -moz-box-shadow: 0 0 3px $black50;
+  -o-box-shadow: 0 0 3px $black50;
+  box-shadow: 0 0 3px $black50;
+  text-shadow: 0 -1px 0 $turq50;
+  @include rounded(4px);
+  @include sans(700);
+  @include animate(0.1s);
+  &:hover {
+    background-color: $turq;
+    border-color: $turq;
+  }
+}
 
 
 
@@ -79,6 +103,12 @@ body {
   line-height: 1.3;
   @include serif(400);
   @include bg($ltbeige);
+  background:    -moz-linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* FF3.6+ */
+  background:        -webkit-gradient(linear, left top, left bottom, color-stop(0%,$beige), color-stop(50%,$ltbeige), color-stop(100%,$white)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* Chrome10+,Safari5.1+ */
+  background:      -o-linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* Opera11.10+ */
+  background:     -ms-linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* IE10+ */
+  background:         linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* W3C */
 }
 
 body, select, input, textarea { color: $black; }
@@ -87,27 +117,17 @@ a { text-decoration: none; }
 header {
   overflow: hidden;
   @include bg($dkgray);
+  background-image: -webkit-gradient(linear, left top, left bottom, from($mdgray), to($dkgray)); /* Saf4+, Chrome */
+  background-image: -webkit-linear-gradient(top, $mdgray, $dkgray); /* Chrome 10+, Saf5.1+ */
+  background-image:    -moz-linear-gradient(top, $mdgray, $dkgray); /* FF3.6 */
+  background-image:     -ms-linear-gradient(top, $mdgray, $dkgray); /* IE10 */
+  background-image:      -o-linear-gradient(top, $mdgray, $dkgray); /* Opera 11.10+ */
+  background-image:         linear-gradient(top, $mdgray, $dkgray);
   @include sans(700);
 }
 
-
-
-
-
-
-/*- ACE HAMMERS
-----------------------------------------------------------------------*/
-
-.ace_gutter {
-  width: 7.1428571428571% !important; /* 50 / 560 */
-}
-
-.ace_scroller {
-  width: 89.2857142857143% !important; /* 500 / 560 */
-}
-
-.ace_content {
-  width: 100% !important;
+.button {
+  @include button;
 }
 
 
@@ -145,6 +165,8 @@ header {
 }/*/mediaquery*/
 
 @media screen and (min-width: 768px) {
+  
+  /* HEADER */
   
   header {
     padding: 1.0416667% 2.08033333%; /* 10 & 20 / 960 */
@@ -191,34 +213,41 @@ header {
     }
   }
     
+  /* COLUMNS */
+  
   #main {
     width: 62.5%; /* 560 / 960 */ 
     margin-left: 2.08033333%; /* 20 / 960 */
     @include float(left);
   }
 
+  aside {
+    width: 31.25%; /* 300 / 960 */
+    margin-right: 2.08033333%; /* 20 / 960 */
+    @include float(right);
+  }
+  
+  /* PAGE COMPONENTS */
+  
+  #room, #chat, #video-chat, #attendees {
+    margin-bottom: 20px;
+    padding: 2.6785714285714% 3.5714286%; /* 20 / 560 */
+    overflow: hidden;
+    position: relative;
+  }
+  
   #ace-editor {
     width: 100% !important;
     display: block;
     position: relative;
     height: 300px !important;
-    margin-top: 20px;
-  }
-  
-  #editor, #chat, #video-chat, #attendees {
-    margin-bottom: 20px;
-    padding: 3.5714286%; /* 20 / 560 */
-    overflow: hidden;
-  }
-  
-  #ace-editor {
-    height: 300px !important;
-    position: relative;
+    margin: 15px 0;
     background: $white;
+    border: 1px solid $beige;
   }
   
   #room {
-    background: $white;
+    background: $white60;
     @include rounded(6px);
     @include insetshadow;
   }
@@ -227,20 +256,105 @@ header {
     padding: 7.6923077%; /* 20 / 260 */
   }
   
-  aside {
-    width: 31.25%; /* 300 / 960 */
-    margin-right: 2.08033333%; /* 20 / 960 */
-    @include float(right);
-  }
+    /* ROOM */
+    
+    .invite {
+      position: absolute;
+      top: 4.1%;
+      right: 3.5714286%;
+    }
+    
+    #room-settings, #editor {
+      label { 
+        font-size: 1.2em;
+        display: inline-block;
+        margin-right: .5em;
+      }
+      select {
+        margin-right: 1.5em;
+        background-position: 100% 8px;
+        width: 60%;
+      }
+      .import {
+        @include float(right);
+      }
+    }
+    
+    #room-settings {
+      margin: 1em 0 0;
+      legend {
+        color: $ltgray;
+        font-size: 1.2em;
+        font-weight: 700;
+        text-transform: uppercase;
+        background: url(../img/forms/select_arrow.gif) 100% 4px no-repeat;
+        padding-right: 16px;
+        &:hover {
+          cursor: pointer;
+          color: $mdgray;
+        }
+      }
+      legend.open {
+        background-position: 100% -27px;
+      }
+      input, label {
+        display: none;
+        margin-top: 1em;
+      }
+      input[type="text"] {
+        width: 40px;
+        position: relative;
+        top: -7px;
+        margin-right: 1em;
+      }
+      input { 
+        margin-right: 1.5em;
+      }
+      input[type="submit"] {
+        background: transparent;
+        border: 0;
+        padding: 0;
+        text-shadow: none;
+        color: $turq;
+        font-weight: 500;
+        margin-top: 0;
+        @include animate(0.2s);
+        &:hover {
+          color: $dkgray;
+        }
+      }
+      label {
+        margin-right: 0.5em;
+      }
+    }
+  
+  /* FOOTER */
   
   footer {
     clear: both;
   }
   
+  /* TYPOGRAPHY */
+  
+  section h1 {
+    font-size: 2.4em;
+    color: $turq;
+    text-transform: uppercase;
+    text-shadow: 0 -1px 0 $black75;
+    line-height: 1;
+    @include sans(900);
+  }
+  
+  aside h1 {
+    font-size: 2em;
+    color: $dkgray;
+    text-shadow: 0 1px 0 $white;
+  }
+  
 }/*/mediaquery*/
 
 @media screen and (min-width: 1024px) {
-  
+
 }/*/mediaquery*/
 
 @media screen and (min-width: 1200px) {
