--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -26,21 +26,10 @@ body {
   font-size: 62.5%;
   /* Reset 1em to 10px */
   line-height: 1.3;
-  font-family: adelle, 'Book Antiqua', Georgia, serif;
-  font-weight: 400;
-  background: #f5f6d7 url(../img/bg/noise.png) center top repeat;
-  background: -moz-linear-gradient(top, #d7d7b8 0%, #f5f6d7 50%, white 100%);
-  /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d7d7b8), color-stop(50%, #f5f6d7), color-stop(100%, white));
-  /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #d7d7b8 0%, #f5f6d7 50%, white 100%);
-  /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #d7d7b8 0%, #f5f6d7 50%, white 100%);
-  /* Opera11.10+ */
-  background: -ms-linear-gradient(top, #d7d7b8 0%, #f5f6d7 50%, white 100%);
-  /* IE10+ */
-  background: linear-gradient(top, #d7d7b8 0%, #f5f6d7 50%, white 100%);
-  /* W3C */ }
+  font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
+  font-weight: 500;
+  background: #eef2f2 url(../img/bg/noise.png) center top repeat;
+  min-height: 100%; }
 
 body, select, input, textarea {
   color: #1d2929; }
@@ -62,14 +51,14 @@ header {
   background-image: -o-linear-gradient(top, #656c74, #4a525a);
   /* Opera 11.10+ */
   background-image: linear-gradient(top, #656c74, #4a525a);
-  font-family: museo-sans, Helmet, Freesans, sans-serif;
-  font-weight: 700; }
+  font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
+  font-weight: 900; }
 
 .button {
-  background: #92d05c url(../img/bg/grad-button.png) left top repeat-x;
+  background: #4da4a4 url(../img/bg/grad-button.png) left top repeat-x;
   padding: 5px 10px 4px;
   display: inline-block;
-  border: 1px solid #92d05c;
+  border: 1px solid #4da4a4;
   color: #fff;
   font-size: 1.1em;
   text-transform: uppercase;
@@ -81,14 +70,14 @@ header {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  font-family: museo-sans, Helmet, Freesans, sans-serif;
+  font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
   font-weight: 700;
   -webkit-transition: all ease-in-out 0.1s;
   -moz-transition: all ease-in-out 0.1s;
   transition: all ease-in-out 0.1s; }
   .button:hover {
-    background-color: #4da4a4;
-    border-color: #4da4a4; }
+    background-color: #92d05c;
+    border-color: #92d05c; }
 
 /*- ACE HAMMERS
 ----------------------------------------------------------------------*/
@@ -137,9 +126,9 @@ header {
     margin: 0 5px; }
 
   header nav li a {
-    padding: 6px 5px 5px;
+    padding: 6px 5px 8px;
     font-size: 1.4em;
-    color: white;
+    color: #eef2f2;
     opacity: 0.6;
     text-transform: uppercase;
     text-shadow: 0 -1px #1d2929;
@@ -155,7 +144,7 @@ header {
     border-radius: 4px; }
     header nav li a:hover {
       opacity: 1;
-      background: rgba(255, 255, 255, 0.25);
+      background: rgba(238, 242, 242, 0.25);
       border-top: 1px solid rgba(29, 41, 41, 0.75); }
 
   /* COLUMNS */
@@ -191,11 +180,11 @@ header {
     position: relative;
     height: 300px !important;
     margin: 15px 0;
-    background: white;
+    background: #fff;
     border: 1px solid #d7d7b8; }
 
   #room {
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.9);
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
@@ -231,13 +220,13 @@ header {
       font-size: 1.2em;
       font-weight: 700;
       text-transform: uppercase;
-      background: url(../img/forms/select_arrow.gif) 100% 4px no-repeat;
+      background: url(../img/forms/select_arrow.gif) 100% 7px no-repeat;
       padding-right: 16px; }
       #room-settings legend:hover {
         cursor: pointer;
         color: #656c74; }
     #room-settings legend.open {
-      background-position: 100% -27px; }
+      background-position: 100% -24px; }
     #room-settings input, #room-settings label {
       display: none;
       margin-top: 1em; }
@@ -275,13 +264,13 @@ header {
     text-transform: uppercase;
     text-shadow: 0 -1px 0 rgba(29, 41, 41, 0.75);
     line-height: 1;
-    font-family: museo-sans, Helmet, Freesans, sans-serif;
+    font-family: ostrich-sans, Univers, 'Helvetica Neue', Helmet, sans-serif;
     font-weight: 900; }
 
   aside h1 {
     font-size: 2em;
     color: #4a525a;
-    text-shadow: 0 1px 0 white; } }
+    text-shadow: 0 1px 0 #eef2f2; } }
 /*/mediaquery*/
 /*/mediaquery*/
 /*/mediaquery*/
