--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -9,20 +9,25 @@ $ltturq: #92ccbf;
 $black: #1d2929;
 $black50: rgba(29,41,41,0.5);
 $black75: rgba(29,41,41,0.75);
-$white: #fff;
-$white25: rgba(255,255,255,0.25);
-$white60: rgba(255,255,255,0.6);
+$white: #eef2f2;
+$white25: rgba(238,242,242,0.25);
+$white60: rgba(238,242,242,0.6);
 $pink: #bd5ca3;
 $green: #92d05c;
 $mdgreen: #b6ec86;
 
 @mixin sans($weight) {
-  font-family: museo-sans, Helmet, Freesans, sans-serif;
+  font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
   font-weight: $weight;
 }
 
 @mixin serif($weight) {
-  font-family: adelle, 'Book Antiqua', Georgia, serif;
+  font-family: Palatino, Cambria, 'Book Antiqua', Caslon, 'Times New Roman', Times, serif;
+  font-weight: $weight;
+}
+
+@mixin display($weight) {
+  font-family: ostrich-sans, Univers, 'Helvetica Neue', Helmet, sans-serif;
   font-weight: $weight;
 }
 
@@ -53,10 +58,10 @@ $mdgreen: #b6ec86;
 }
 
 @mixin button {
-  background: $green url(../img/bg/grad-button.png) left top repeat-x;
+  background: $turq url(../img/bg/grad-button.png) left top repeat-x;
   padding: 5px 10px 4px;
   display: inline-block;
-  border: 1px solid $green;
+  border: 1px solid $turq;
   color: #fff;
   font-size: 1.1em;
   text-transform: uppercase;
@@ -69,8 +74,8 @@ $mdgreen: #b6ec86;
   @include sans(700);
   @include animate(0.1s);
   &:hover {
-    background-color: $turq;
-    border-color: $turq;
+    background-color: $green;
+    border-color: $green;
   }
 }
 
@@ -101,14 +106,9 @@ img::-moz-selection { background: transparent; }
 body {
   font-size: 62.5%; /* Reset 1em to 10px */
   line-height: 1.3;
-  @include serif(400);
-  @include bg($ltbeige);
-  background:    -moz-linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* FF3.6+ */
-  background:        -webkit-gradient(linear, left top, left bottom, color-stop(0%,$beige), color-stop(50%,$ltbeige), color-stop(100%,$white)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* Chrome10+,Safari5.1+ */
-  background:      -o-linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* Opera11.10+ */
-  background:     -ms-linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* IE10+ */
-  background:         linear-gradient(top, $beige 0%, $ltbeige 50%, $white 100%); /* W3C */
+  @include sans(500);
+  @include bg($white);
+  min-height: 100%;
 }
 
 body, select, input, textarea { color: $black; }
@@ -123,7 +123,7 @@ header {
   background-image:     -ms-linear-gradient(top, $mdgray, $dkgray); /* IE10 */
   background-image:      -o-linear-gradient(top, $mdgray, $dkgray); /* Opera 11.10+ */
   background-image:         linear-gradient(top, $mdgray, $dkgray);
-  @include sans(700);
+  @include sans(900);
 }
 
 .button {
@@ -194,7 +194,7 @@ header {
   }
   
   header nav li a {
-    padding: 6px 5px 5px;
+    padding: 6px 5px 8px;
     font-size: 1.4em;
     color: $white;
     opacity: 0.6;
@@ -242,12 +242,12 @@ header {
     position: relative;
     height: 300px !important;
     margin: 15px 0;
-    background: $white;
+    background: #fff;
     border: 1px solid $beige;
   }
   
   #room {
-    background: $white60;
+    background: rgba(255,255,255,.9);
     @include rounded(6px);
     @include insetshadow;
   }
@@ -287,7 +287,7 @@ header {
         font-size: 1.2em;
         font-weight: 700;
         text-transform: uppercase;
-        background: url(../img/forms/select_arrow.gif) 100% 4px no-repeat;
+        background: url(../img/forms/select_arrow.gif) 100% 7px no-repeat;
         padding-right: 16px;
         &:hover {
           cursor: pointer;
@@ -295,7 +295,7 @@ header {
         }
       }
       legend.open {
-        background-position: 100% -27px;
+        background-position: 100% -24px;
       }
       input, label {
         display: none;
@@ -342,7 +342,7 @@ header {
     text-transform: uppercase;
     text-shadow: 0 -1px 0 $black75;
     line-height: 1;
-    @include sans(900);
+    @include display(900);
   }
   
   aside h1 {
