Added multbg test to modernizr and fixed bg image stacking order for header
Signed-off-by: Mike Gibson <mike@lovehasnologic.com>

--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -39,18 +39,18 @@ a {
 
 header {
   overflow: hidden;
-  background: #4a525a url(../img/bg/noise.png) center top repeat;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#656c74), to(#4a525a));
+  background-color: #4a525a;
+  background-image: url(../img/bg/noise.png), -webkit-gradient(linear, left top, left bottom, from(#656c74), to(#4a525a));
   /* Saf4+, Chrome */
-  background-image: -webkit-linear-gradient(top, #656c74, #4a525a);
+  background-image: url(../img/bg/noise.png), -webkit-linear-gradient(top, #656c74, #4a525a);
   /* Chrome 10+, Saf5.1+ */
-  background-image: -moz-linear-gradient(top, #656c74, #4a525a);
+  background-image: url(../img/bg/noise.png), -moz-linear-gradient(top, #656c74, #4a525a);
   /* FF3.6 */
-  background-image: -ms-linear-gradient(top, #656c74, #4a525a);
+  background-image: url(../img/bg/noise.png), -ms-linear-gradient(top, #656c74, #4a525a);
   /* IE10 */
-  background-image: -o-linear-gradient(top, #656c74, #4a525a);
+  background-image: url(../img/bg/noise.png), -o-linear-gradient(top, #656c74, #4a525a);
   /* Opera 11.10+ */
-  background-image: linear-gradient(top, #656c74, #4a525a);
+  background-image: url(../img/bg/noise.png), linear-gradient(top, #656c74, #4a525a);
   font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
   font-weight: 900; }
 
