--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -116,13 +116,13 @@ a { text-decoration: none; }
 
 header {
   overflow: hidden;
-  @include bg($dkgray);
-  background-image: -webkit-gradient(linear, left top, left bottom, from($mdgray), to($dkgray)); /* Saf4+, Chrome */
-  background-image: -webkit-linear-gradient(top, $mdgray, $dkgray); /* Chrome 10+, Saf5.1+ */
-  background-image:    -moz-linear-gradient(top, $mdgray, $dkgray); /* FF3.6 */
-  background-image:     -ms-linear-gradient(top, $mdgray, $dkgray); /* IE10 */
-  background-image:      -o-linear-gradient(top, $mdgray, $dkgray); /* Opera 11.10+ */
-  background-image:         linear-gradient(top, $mdgray, $dkgray);
+  background-color: $dkgray;
+  background-image:  url(../img/bg/noise.png), -webkit-gradient(linear, left top, left bottom, from($mdgray), to($dkgray)); /* Saf4+, Chrome */
+  background-image: url(../img/bg/noise.png), -webkit-linear-gradient(top, $mdgray, $dkgray); /* Chrome 10+, Saf5.1+ */
+  background-image:    url(../img/bg/noise.png), -moz-linear-gradient(top, $mdgray, $dkgray); /* FF3.6 */
+  background-image:     url(../img/bg/noise.png), -ms-linear-gradient(top, $mdgray, $dkgray); /* IE10 */
+  background-image:      url(../img/bg/noise.png), -o-linear-gradient(top, $mdgray, $dkgray); /* Opera 11.10+ */
+  background-image:         url(../img/bg/noise.png), linear-gradient(top, $mdgray, $dkgray);
   @include sans(900);
 }
 
