--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -126,29 +126,23 @@ header {
   @include sans(900);
 }
 
+header h1 {
+  width: 300px;
+  height: 74px;
+  float: left;
+  a {
+    text-indent: -9999px;
+    display: block;
+    height: 74px;
+    width: 300px;
+    background: url(../img/logo/cs-logo.png) left top no-repeat;
+  }
+}
+
 .button {
   @include button;
 }
 
-
-
-
-
-
-/*- ACE HAMMERS
-----------------------------------------------------------------------*/
-
-.ace_gutter {
-  width: 7.1428571428571% !important; /* 50 / 560 */
-}
-
-.ace_scroller {
-  width: 89.2857142857143% !important; /* 500 / 560 */
-}
-
-.ace_content {
-  width: 100% !important;
-}
 
 
 
@@ -169,7 +163,7 @@ header {
   /* HEADER */
   
   header {
-    padding: 1.0416667% 2.08033333%; /* 10 & 20 / 960 */
+    padding: 10px 2.08033333%; /* 10 & 20 / 960 */
     margin-bottom: 20px;
     width: 95.833333%; /* 920 / 960 */
     border-bottom: 1px solid $mdgray;
@@ -185,6 +179,7 @@ header {
   
   header nav {
     @include float(right);
+    margin-top: 34px;
   }
   
   header nav li {
@@ -247,7 +242,7 @@ header {
   }
   
   #room {
-    background: rgba(255,255,255,.9);
+    background: rgba(255,255,255,.7);
     @include rounded(6px);
     @include insetshadow;
   }
@@ -281,7 +276,7 @@ header {
     }
     
     #room-settings {
-      margin: 1em 0 0;
+      margin: .5em 0 0;
       legend {
         color: $ltgray;
         font-size: 1.2em;
@@ -328,6 +323,20 @@ header {
       }
     }
   
+  /* ACE HAMMERS */
+  
+  .ace_gutter {
+    width: 7.1428571428571% !important; /* 50 / 560 */
+  }
+  
+  .ace_scroller {
+    width: 89.2857142857143% !important; /* 500 / 560 */
+  }
+  
+  .ace_content {
+    width: 100% !important;
+  }
+
   /* FOOTER */
   
   footer {
@@ -337,10 +346,10 @@ header {
   /* TYPOGRAPHY */
   
   section h1 {
-    font-size: 2.4em;
+    font-size: 2.8em;
     color: $turq;
     text-transform: uppercase;
-    text-shadow: 0 -1px 0 $black75;
+    text-shadow: 0 -1px 1px $black50, 0 1px 0 #fff;
     line-height: 1;
     @include display(900);
   }
