--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -71,6 +71,10 @@
 		
 		<section id="conversation">
 	
+			<article class="empty">
+				<p>Welcome to the [name of the room] stage. Start chatting away&hellip;</p>
+			</article>
+
 			<article class="attendee">
 				<p><strong>Username:</strong> This is the text of an attendee</p>
 			</article>
@@ -83,7 +87,7 @@
 				<p><strong>Username:</strong> This is the text of a room owner</p>
 			</article>
 	
-			<article class="attendee coder active">
+			<article class="attendee coder baton">
 				<p><strong>Username:</strong> This is the text of a coder that has the baton</p>
 			</article>
 	
@@ -92,7 +96,7 @@
 		<form id="text-chat">
 			
 			<input type="text" placeholder="Speak Up" />
-			<input type="submit" value="Be Heard" />
+			<input type="submit" value="Be Heard" class="button" />
 			
 		</form>
 		
@@ -108,11 +112,11 @@
 			[Baton holding Tokbox User]
 		</article>
 
-		<article id="tokbox-team-2" class="baton">
+		<article id="tokbox-team-2">
 			[Tokbox User]
 		</article>
 
-		<article id="tokbox-team-3" class="baton">
+		<article id="tokbox-team-3">
 			[Tokbox User]
 		</article>
 
