--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -1,11 +1,11 @@
 /*-  VANITY STYLES
 ----------------------------------------------------------------------*/
 ::selection {
-  background: #fff;
+  background: rgba(146, 208, 92, 0.5);
   text-shadow: none; }
 
 ::-moz-selection {
-  background: #fff;
+  background: rgba(146, 208, 92, 0.5);
   text-shadow: none; }
 
 img::selection {
@@ -19,7 +19,7 @@ img::-moz-selection {
     -webkit-text-size-adjust: none; }
 
   a:link {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); } }
+    -webkit-tap-highlight-color: rgba(146, 208, 92, 0.5); } }
 /*- SHARED STYLES PLUS SUB 480PX MEDIA QUERY STYLES
 ----------------------------------------------------------------------*/
 body {
@@ -35,7 +35,8 @@ body, select, input, textarea {
   color: #1d2929; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #4da4a4; }
 
 header {
   overflow: hidden;
@@ -55,15 +56,35 @@ header {
   font-weight: 900; }
 
 header h1 {
-  width: 203px;
-  height: 50px;
+  width: 213px;
+  height: 60px;
   float: left; }
   header h1 a {
     text-indent: -9999px;
     display: block;
-    height: 74px;
-    width: 300px;
-    background: url(../img/logo/cs-logo.png) left top no-repeat; }
+    height: 50px;
+    width: 203px;
+    padding: 5px;
+    background: url(../img/logo/cs-logo.png) 5px 5px no-repeat;
+    border-top: 1px solid transparent;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px; }
+    header h1 a:hover {
+      background-color: rgba(238, 242, 242, 0.25);
+      border-top: 1px solid rgba(29, 41, 41, 0.75);
+      color: #eef2f2; }
+
+/* LINKS */
+a {
+  padding: 0 1px;
+  -webkit-transition: all ease-in-out 0.1s;
+  -moz-transition: all ease-in-out 0.1s;
+  transition: all ease-in-out 0.1s; }
+  a:hover {
+    color: #1d2929;
+    background-color: #92ccbf;
+    background-color: rgba(77, 164, 164, 0.25); }
 
 .button {
   background: #4da4a4 url(../img/bg/grad-button.png) left top repeat-x;
@@ -87,6 +108,7 @@ header h1 {
   -moz-transition: all ease-in-out 0.1s;
   transition: all ease-in-out 0.1s; }
   .button:hover {
+    color: #fff;
     background-color: #92d05c;
     border-color: #92d05c; }
 
@@ -115,7 +137,7 @@ header h1 {
     float: right;
     display: inline;
     overflow: hidden;
-    margin-top: 10px; }
+    margin-top: 15px; }
 
   header nav li {
     float: left;
@@ -144,7 +166,8 @@ header h1 {
     header nav li a:hover {
       opacity: 1;
       background: rgba(238, 242, 242, 0.25);
-      border-top: 1px solid rgba(29, 41, 41, 0.75); }
+      border-top: 1px solid rgba(29, 41, 41, 0.75);
+      color: #eef2f2; }
 
   /* COLUMNS */
   #main {
@@ -193,6 +216,15 @@ header h1 {
     padding: 7.6923077%;
     /* 20 / 260 */ }
 
+  #chat {
+    background: #eef2f2;
+    background: rgba(255, 255, 255, 0.7);
+    padding: 2.6785714285714% 3.5714286%;
+    /* 20 / 560 */
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px; }
+
   /* ROOM */
   .invite {
     position: absolute;
@@ -207,6 +239,8 @@ header h1 {
     margin-right: 1.5em;
     background-position: 100% 8px;
     width: 60%; }
+    #room-settings select option[data-file="file-new"], #editor select option[data-file="file-new"] {
+      font-style: italic; }
   #room-settings .import, #editor .import {
     float: right;
     display: inline;
@@ -219,13 +253,16 @@ header h1 {
       font-size: 1.2em;
       font-weight: 700;
       text-transform: uppercase;
-      background: url(../img/forms/select_arrow.gif) 100% 7px no-repeat;
-      padding-right: 16px; }
+      background: url(../img/forms/select_arrow.gif) 100% 6px no-repeat;
+      padding-right: 16px;
+      -webkit-transition: color ease-in-out 0.1s;
+      -moz-transition: color ease-in-out 0.1s;
+      transition: color ease-in-out 0.1s; }
       #room-settings legend:hover {
         cursor: pointer;
         color: #656c74; }
     #room-settings legend.open {
-      background-position: 100% -24px; }
+      background-position: 100% -25px; }
     #room-settings input, #room-settings label {
       display: none;
       margin-top: 1em; }
@@ -263,6 +300,62 @@ header h1 {
 
   .ace_content {
     width: 100% !important; }
+
+  /* TEXT CHAT */
+  #conversation {
+    height: 150px;
+    overflow-y: auto;
+    margin-bottom: 5px; }
+    #conversation article {
+      font-size: 1.3em;
+      margin: 0 0 .4em; }
+      #conversation article p {
+        color: #656c74; }
+      #conversation article strong {
+        color: #92ccbf; }
+    #conversation .empty {
+      font-style: italic; }
+    #conversation .coder strong {
+      color: #4da4a4; }
+    #conversation .owner strong {
+      color: #92d05c; }
+    #conversation .baton strong {
+      color: #1d2929; }
+
+  #chat input[type="text"] {
+    width: 80%;
+    margin-right: 3%; }
+  #chat input[type="submit"] {
+    width: 16%;
+    padding-left: 0;
+    padding-right: 0;
+    float: right;
+    display: inline;
+    overflow: hidden;
+    background: #4da4a4 url(../img/bg/grad-button.png) left top repeat-x;
+    padding: 5px 10px 4px;
+    display: inline-block;
+    border: 1px solid #4da4a4;
+    color: #fff;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    -webkit-box-shadow: 0 0 3px rgba(29, 41, 41, 0.5);
+    -moz-box-shadow: 0 0 3px rgba(29, 41, 41, 0.5);
+    -o-box-shadow: 0 0 3px rgba(29, 41, 41, 0.5);
+    box-shadow: 0 0 3px rgba(29, 41, 41, 0.5);
+    text-shadow: 0 -1px 0 rgba(77, 164, 164, 0.5);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    font-family: Univers, 'Helvetica Neue', Helmet, FreeSans, sans-serif;
+    font-weight: 700;
+    -webkit-transition: all ease-in-out 0.1s;
+    -moz-transition: all ease-in-out 0.1s;
+    transition: all ease-in-out 0.1s; }
+    #chat input[type="submit"]:hover {
+      color: #fff;
+      background-color: #92d05c;
+      border-color: #92d05c; }
 
   /* FOOTER */
   footer {
