Stages can now be created at /stages/new -- makes sure you are running mongod

--- a/views/stage.ejs
+++ b/views/stage.ejs
@@ -4,7 +4,7 @@
 	<script src="http://staging.tokbox.com/v0.91/js/TB.min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" charset="utf-8">
 		var apiKey = 3703831;
-		var sessionId = '<%= stage.openTokSessionId %>';
+		var sessionId = '<%= stage.channel %>';
 		var token = '<%= otToken %>';
 								
 		var session;
